# metacentrum-llm-quickstart

./: README.md  pyproject.toml  requirements.txt  setup.py
pbs/: batch
src/: main.py
