[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "metacentrum-llm-quickstart"
version = "0.0.0"
authors = [
    { name = "patztablook22", email = "patrik.zavoral@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "py-cord >= 2.3"
]
